# sse-popcount

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  README.rst  config.h  configure.ac  function_registry.cpp  popcnt-aarch64.cpp  popcnt-all.cpp  popcnt-avx2-cpu.cpp  popcnt-avx2-harley-seal.cpp  popcnt-avx2-lookup.cpp  popcnt-avx512-harley-seal.cpp  popcnt-avx512-vpopcnt.cpp  popcnt-avx512bw-lookup.cpp  popcnt-avx512vbmi-lookup.cpp  popcnt-bit-parallel-scalar.cpp  popcnt-bit-parallel-scalar32.cpp  popcnt-builtin.cpp  popcnt-cpu.cpp  popcnt-harley-seal.cpp  popcnt-lookup.cpp  popcnt-neon.cpp  popcnt-rvv.cpp  popcnt-sse-bit-parallel-better.cpp  popcnt-sse-bit-parallel.cpp  popcnt-sse-cpu.cpp  popcnt-sse-harley-seal.cpp  popcnt-sse-lookup.cpp  run.sh  speed.cpp  sse_operators.cpp  ssse3_popcount-test.sh  ssse3_popcount.c  verify.cpp
m4/: ax_check_x86_features.m4  ax_cxx_compile_stdcxx_0x.m4  ax_cxx_compile_stdcxx_14.m4  ax_cxx_compiler_vendor.m4  ax_gcc_x86_cpu_supports.m4
original/: ssse3_popcount-test.sh
results/: README.rst  refresh_all.sh  report.sh
results/arm/: arm-64bit-clang3.8.0.csv  arm-64bit-clang3.8.0.metadata  arm-64bit-clang3.8.0.rst  arm-64bit-gcc4.8.5.csv  arm-64bit-gcc4.8.5.metadata  arm-64bit-gcc4.8.5.rst  armv7-32bit-gcc4.9.2.csv  armv7-32bit-gcc4.9.2.metadata  armv7-32bit-gcc4.9.2.rst  report.sh  run.sh
results/bulldozer/: bulldozer-fx-8510-gcc4.8.4-sse.csv  report.sh  (+2 more)
scripts/: avx512vbmi-lookups.py  data.py  detail-pattern.rst  function_registry.py  main-pattern.rst  metadata.py  readme_listproc.py  report.py  table.py
(+44 files in other folders)
